--- a/B-app/src/app/components/login/login.component.html
+++ b/B-app/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-
+<p class="d-flex justify-content-end mt-3 new">Log in as a Vendor ?<a class="fw-bold " routerLink="/vendor-login">Login</a></p>
 <div class="d-flex justify-content-center ">
     <form  (ngSubmit)="handelLoginForm()" [formGroup]="loginForm" class="h">
         <!-- <label for="email">email</label> -->
