--- a/B-app/src/app/components/navbar-blank/navbar-blank.component.html
+++ b/B-app/src/app/components/navbar-blank/navbar-blank.component.html
@@ -2,8 +2,10 @@
     class="navbar navbar-expand-sm navbar-light bg-light fixed-top "
 >
     <div class="container"  >
-        <h3 class="esm" routerLink="/home">Business Consulting Hub </h3>
-        <button
+        <img src="../../../assets/images/online-agreement logo.avif" class="handshake g-3 ">
+        <h3 class="esm" routerLink="/home">BC Hub  </h3>
+        
+        <!-- <button
             class="navbar-toggler d-lg-none"
             type="button"
             data-bs-toggle="collapse"
@@ -13,14 +15,11 @@
             aria-label="Toggle navigation"
         >
             <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
-            <ul class="navbar-nav me-auto mt-2 mt-lg-0 ">
+        </button> -->
+        <div class="collapse navbar-collapse " id="collapsibleNavId">
+            <ul class="navbar-nav me-auto mt-2 mt-lg-0 navbarGeded">
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/home" routerLinkActive="hi fw-bold ">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/cart" routerLinkActive="hi fw-bold ">Cart</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/services" routerLinkActive="hi fw-bold ">Services</a>
@@ -28,8 +27,11 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/categories" routerLinkActive="hi fw-bold ">Categories</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/products" routerLinkActive="hi fw-bold ">Products</a>
+                </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/cart" routerLinkActive="hi fw-bold ">Cart</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/products" routerLinkActive="text-success fw-bold ">Products</a>
