--- a/B-app/src/app/components/cart/cart.component.css
+++ b/B-app/src/app/components/cart/cart.component.css
@@ -3,13 +3,21 @@
     top: 232px;
     left: 96px;
     /* width: 824px; */
-    width: 60%;
-    height: 684px;
-   
+    width: 100%;
+    /* height: 684px; */
+    height: 100%;
     background-color: #ffffff;
     border-radius: 24px;
     box-shadow: 0px 2px 10px rgba(3,3,3,0.1);
   }
+  .emptycart{
+   margin-left: 285px;
+   height: 450px;
+
+  }
+  /* .quantitybuttons{
+    margin-left: 200px;
+  } */
   .main-text {
     color: #1d1d1d;
     font-size: 32px;
@@ -17,11 +25,26 @@
     font-weight: 700;
     line-height: 42px;
   }
-  
+  /* .quantity{
+    margin-right: 400px;
+  }
+   */
+.remove{
+cursor: pointer;    
+}
+
+  img{
+    /* width: 70%; */
+    height: 70px;
+  }
+  /* .n{
+    width: 300px;
+  } */
   .cart-img{
-    top: 404px;
-  left: 136px;
-  width: 80px;
+    /* top: 404px;
+  left: 136px;*/
+  /* width: 100px;  */
+  /* width: 10%; */
   height: 80px;
   border-radius: 24px;
   /* background-image: url(../images/Home/Image\ \(61\).png); */
@@ -31,8 +54,9 @@
   }
 
   .cart-descrption{
-    width: 28%;
-    padding-top:20px ;
+    /* width: 28%; */
+    padding-top:20px ; 
+    margin-left: 10%;
   }
   .cart-descrption h2{
     margin: auto;
@@ -44,8 +68,11 @@
   }
 .quanity{
     text-align: center;
-    top: 424px;
-    left: 591px;
+    /* top: 424px; */
+    /* left: 591px; */
+    margin-top: 25%;
+     /* margin-left: -15px;  */
+    margin-right: 500px; 
     width: 104px;
     height: 40px;
     padding: 0px 8px;
@@ -63,139 +90,29 @@
 }
 .quanity p{
     text-align: center;
-    margin: auto;
+    /* margin: auto; */
     padding-top: 11px;
 }
-.recit{
-    top: 232px;
-  left: 936px;
-  width: 40%;
-  /* width: 100px; */
-  height: 684px;
-  background-color: #cb9afd;
-  border-radius: 24px;
-  padding-top: 38px;
-  padding-left: 35px;
+.price{
+    /* margin-left: 25px; */
+    font-weight: 500;
+    /* margin-left: 0%; */
+    margin-top: 25%;
 }
-.recit h1{
-    color: #ffffff;
-    font-size: 32px;
-    font-family: "Montserrat";
-    font-weight: 700;
-    line-height: 40px;   
-    padding-bottom: 35px;
+.checkoutbtn{
+   margin: 450px;
+   margin-top:2%;
 }
-
-
-.recit h2{
-    color: #ffffff;
-    font-size: 14px;
-  font-family: "Montserrat";
-  font-weight: 700;
-  line-height: 18px; 
-  margin-bottom: 18px;
+.button{
+    border-radius: 14px;
+    box-shadow: #ffffff;
+    border-color: white;
+    width: 30px;
+    display: flex;
+    
 }
-
-
-.recit p{
-    color: #ffffff;
-    font-size: 14px;
-    font-family: "Montserrat";
-    line-height: 18px;
-}
-.recit p i{
-   margin-right: 8px;
-}
-.recit input{
-    background-color: #cb9afd;
-    border: #cb9afd solid;
-}
-.crdit_card{
-    width: 32%;
-}
-.methods{
-margin: auto;
-/* width: 85%; */
-padding-right: 140px;
-padding-bottom: 20px;
-/* margin-right: 1700px; */
-border-bottom: 0.4px  solid  #ffffff;
-
-
-}
-.cardholder{
-    padding-top: 18px;
-    padding-bottom: 20px;
-    /* margin-right: 1700px; */
-    border-bottom: 0.4px  solid  #ffffff;  
-}
-.form-control{
-    background-color: #cb9afd !important;
-    color: #ffffff !important;
-}
-.methods button{
-    cursor: pointer;
-    top: 422px;
-    left: 984px;
-    width: 136px;
-    height: 50px;
-    padding: 0px 8px;
-    border: 1px solid #1d1d1d;
-    box-sizing: border-box;
-    border-radius: 24px;
-    background-color: #ffffff;
-    color: #1d1d1d;
-    font-size: 14px;
-    font-family: "Montserrat";
-    font-weight: 700;
-    line-height: 18px;
-    outline: none;  
-}
-
-.paypal{
-    width: 32%;
- 
-}
-
-.credit-card {
-    padding-right: 10px;
-    color: #ffffff;
-    margin-bottom: 18px;
-}
-.cvvlabel{
-    margin-left: 108px;
-}
-.credit-card  input{
-   width: 96px !important; 
-   color: #ffffff !important;
-}
-.credit-card  input::placeholder{
-  
-    color: #ffffff !important;
- }
-.inputts{
-    padding-top: 10px;
-}
-
-.inputts div{
-    border-bottom: 0.4px  solid  #ffffff;  
-    margin-left:8px ;
-}
-.Confirmbtn{
-    cursor: pointer;
-    top: 826px;
-    left: 976px;
-    width: 328px;
-    height: 50px;
-    padding: 0px 8px;
-    border: 1px solid #1d1d1d;
-    box-sizing: border-box;
-    border-radius: 24px;
-    background-color: #ffffff;
-    color: #1d1d1d;
-    font-size: 18px;
-    font-family: "Montserrat";
-    font-weight: 700;
-    line-height: 24px;
-    outline: none;
+.button:hover{
+    background: white;
+    /* color: #cb9afd; */
+    border-color: #cb9afd;
 }
