--- a/B-app/src/app/components/cart/cart.component.html
+++ b/B-app/src/app/components/cart/cart.component.html
@@ -1,3 +1,8 @@
+<div *ngIf="isCartEmpty; else notEmpty">
+  <h3 class="d-flex justify-content-center align-items-center mt-2  ">The cart is empty </h3>
+  <img src="../../../assets/images/empty Cart.jpg" class=" d-flex justify-content-center align-items-center w-50 emptycart ">
+</div>
+<ng-template #notEmpty>
 <div class="container-fluid">
   <div class="row d-flex">
     <div class="main">
@@ -6,114 +11,89 @@
         <thead>
           <tr>
             <th scope="col">product</th>
-            <th scope="col">Quanity</th>
+            <th scope="col" class="quantitybuttons" >Quantity</th>
 
-            <th scope="col">price total</th>
+            <th scope="col" class="thPrice">Price </th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let product of products">
+          <!-- <tr *ngFor="let product of products" [title]="product.product.name"> -->
+            <tr *ngFor="let product of products" [title]="product.product.name">
             <td>
-              <div class="row d-flex">
+              <div class="row d-flex ">
                 <div class="cart-img">
-                    <img [src]="product.imageUrl">
-                </div>
-                <div class="cart-descrption">
-                  <h2>{{product.name}}</h2>
+                  <img class="h-100 " [src]="product.product.imageUrl">
+                  <h5 class=" ">{{product.product.name | trim}} 
+                    <span *ngIf="product.product.name.split(' ').length >2">...</span>
+                  </h5>
                 </div>
               </div>
-            </td>
 
-            <td>
-              <div class="quanity">
-                <p>{{product.quanity}}</p>
+
+              <div class="cart-descrption  ">
+                
+       <br>
+              
+            
               </div>
+              <span class="text-danger remove d-inline " (click)="removeItem(product.id)" >
+                <i class="fa fa-trash "></i>
+                remove 
+            </span> 
             </td>
+            <td>
+
+              <div class=" d-flex mt-5 ">
+                <button class="button bg-light" (click)="updateCart(product.id,product.quantity+1 )"> + </button>
+                <p class="m-2 "> {{product.quantity}}</p>
+                <button class="button  bg-light "(click)="updateCart(product.id,product.quantity-1 )"> - </button>
+              </div>
+
+            </td>
+          
 
             <td>
               <div class="price">
-                <p>{{product.price}}</p>
+                <p>{{product.product.price*product.quantity}} EGP</p>
               </div>
             </td>
           </tr>
-          <!-- <tr>
-            <td>
-              <div class="row d-flex">
-                <div class="cart-img"></div>
-                <div class="cart-descrption">
-                  <h2>Dog bed &Blanekt</h2>
-                </div>
-              </div>
-            </td>
 
-            <td>
-              <div class="quanity">
-                <p>1</p>
-              </div>
-            </td>
-
-            <td>
-              <div class="price">
-                <p>$15</p>
-              </div>
-            </td>
-          </tr> -->
         </tbody>
       </table>
-    </div>
-    <div class="recit">
-      <p><i class="fa-solid fa-arrow-left"></i> checkout step</p>
-      <h1>Payment Info</h1>
-      <h2>Payment Method</h2>
-      <div class="methods d-flex align-items-start justify-content-between">
-        <div class="crdit_card">
-          <button>Credit Card'</button>
-        </div>
-        <div class="paypal">
-          <button>Pay Pal</button>
-        </div>
-      </div>
-      <div class="cardholder">
-        <h2>Cardholder Name</h2>
-        <input type="text" class="form-control" />
-      </div>
-      <div class="cardholder">
-        <h2>Card Number</h2>
-        <input type="text" class="form-control" />
-      </div>
-
-      <div class="credit-card">
-        <div class="labelss d-flex">
-          <div class="creditlabel">
-            <label for="expiration-date">Expiration Date:</label>
-          </div>
-          <div class="cvvlabel">
-            <label for="cvv">CVV:</label>
-          </div>
-        </div>
-        <div class="inputts d-flex">
-          <div class="month">
-            <input
-              type="text"
-              id="expiration-date"
-              placeholder="MM "
-              maxlength="2"
-            />
-          </div>
-          <div class="year">
-            <input
-              type="text"
-              id="expiration-date"
-              placeholder=" YY"
-              maxlength="2"
-            />
-          </div>
-          <div class="cvvCode">
-            <input type="text" id="cvv" placeholder="CVV" maxlength="3" />
-          </div>
-        </div>
-      </div>
-      <button class="Confirmbtn">Confirm & Pay $ 37.17</button>
+      
     </div>
   </div>
 </div>
+<button class="btn  checkoutbtn"
+          routerLink="/checkout"> CheckOut 
+        </button>
+         
+</ng-template>
+
+
+
+<!-- <br> <br><br>
+
+<div class="bg-light p-4">
+  <div class="row align-items-center " *ngFor="let product of products">
+    <div class="col-md-2">
+        <div>
+            <img [src]="product.product.imageUrl" class="w-50 h-25 p-2">
+        </div>
+    </div>
+    <div class="col-md-8">
+       <div>
+        <h4>{{product.product.name |trim}}</h4>
+        <span class="text-main">{{product.product.price}}</span>
+        <div class="remove">
+            <span class="text-danger">
+                <i class="fa fa-trash "></i>
+                remove
+            </span>
+        </div>
+       </div>
+    </div>
+  
+    </div>
+</div> -->
