--- a/B-app/src/app/components/navbar-auth/navbar-auth.component.html
+++ b/B-app/src/app/components/navbar-auth/navbar-auth.component.html
@@ -27,6 +27,7 @@
             <img src="./assets/images/freshcart-logo.svg">
         </a> -->
         <!-- <h4 class="esm "> Esm el mashro3 el gamed</h4> -->
+        <img src="../../../assets/images/online-agreement logo.avif" class="handshake g-3 ">
         <h3 class="esm-gded">Business Consulting Hub </h3>
         <button
             class="navbar-toggler d-lg-none"
