--- a/B-app/src/app/components/service-details/service-details.component.css
+++ b/B-app/src/app/components/service-details/service-details.component.css
@@ -6,7 +6,8 @@
     display: none;
 }
 .service{
-    margin-top: 35px;
+    /* margin-top: 35px; */
+    margin-top: 10px;
     margin-bottom: 35px;
 }
 .service  .service-slider{
@@ -16,10 +17,15 @@
 }
 .service  .service-slider .service-item{
     box-shadow:  rgba(145, 158, 171, .2) 0px 2px 4px -1px, rgba(145, 158, 171, .14) 0px 4px 5px 0px, rgba(145, 158, 171, .12) 0px 1px 10px 0px;;
-    width: 18%;
-    height: 180px;
+    /* width: 18%;*/
+    height: 180px; 
+    width: 23%;
     border-radius: 24px;
+    /* background-color: #272b30; */
 
+}
+.form-control{
+    height: 40px;
 }
 .service  .service-slider .service-item-content{
     display: flex;
@@ -27,9 +33,7 @@
     justify-content: space-evenly;
     padding-left: 20px;
     padding-top: 15px;
-    height: 90%;
-    
-
+    /* height: 100%; */
     
 }
 
@@ -48,10 +52,10 @@
     outline: none;
 }
 .one{
-border-bottom: 2px solid  #f0f0f0;;
+border-bottom: 2px solid  #f0f0f0;
 }
 .servic-title{
-  
+
         color: #272b30;
         font-size: 24px;
         font-family: "Montserrat";
