--- a/B-app/src/app/components/home/home.component.html
+++ b/B-app/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
- <div  class="container">
+<section class="sectionMain">
+  <div  class="container">
     <div class="second">
         <div class="imageupper">
 
@@ -9,10 +10,10 @@
         </div>
         <div class="third">
 
-            <div class="firstinput">
+            <!-- <div class="firstinput">
                 <input  class="searchinput" type="text" placeholder="Company adress">
                 <label  class="searchlabel  " for="">Search</label>
-            </div>
+            </div> -->
             <div class="lowerimage">
                 
             </div>
@@ -35,27 +36,30 @@
                   <img [src]="images[0]" alt="">
                   <div class="item-text">
                     <h3 class="item-h3">Step 1</h3>
-                  <p>Enter your business details.
+                  <!-- <p>Enter your business details.
                     Provide your address or enable .
-                    location for accurate services.</p>
+                    location for accurate services.</p> -->
+                    <p>Browse through our comprehensive list of business consulting services to find the ones that match your needs.</p>
                   </div>
                 </div>
                 <div class="acc-item mid">
                   <img [src]="images[1]" alt="">
                   <div class="item-text">
-                  <h3 class="item-h3">Step 2</h3>
-                  <p>Choose a service and a
+                  <h3 class="item-h3 mt-3">Step 2</h3>
+                  <!-- <p>Choose a service and a
                     discount. You're closer to
-                    optimizing your business.</p>
+                    optimizing your business.</p> -->
+                    <p>Select a service and choose from a variety of reputable companies specializing in that area. Book a session with your chosen company effortlessly.</p>
                   </div>
                 </div>
                 <div class="acc-item">
                   <img [src]="images[2]" alt="">
                   <div class="item-text">
                   <h3 class="item-h3">Step 3</h3>
-                  <p>Complete your payment. Sit
+                  <!-- <p>Complete your payment. Sit
                     back and relax while we
-                    enhance your business!</p>
+                    enhance your business!</p> -->
+                    <p>Explore our e-commerce section to purchase high-quality goods in selected categories. Enjoy the convenience of consulting and shopping all in one platform!</p>
                   </div>
                 </div>
               </div>
@@ -212,3 +216,5 @@
       </footer>
     </section>
     <!-- <script [src]="assets/vendors/js/bootstrap.bundle.min.js"></script> -->
+
+</section>
