--- a/B-app/src/app/components/navbar-auth/navbar-auth.component.css
+++ b/B-app/src/app/components/navbar-auth/navbar-auth.component.css
@@ -1,8 +1,9 @@
-.esm{
-    color: #DCAEFD;
+.esm {
+    color: #DCAEFD ;
 }
 .esm-gded{
-    color: blueviolet;
+    /* color: blueviolet; */
+    color:#DCAEFD;
 }
 .handshake{
     width: 4%;
