--- a/B-app/src/app/components/cart/cart.component.css
+++ b/B-app/src/app/components/cart/cart.component.css
@@ -3,12 +3,21 @@
     top: 232px;
     left: 96px;
     /* width: 824px; */
-    width: 100%;
+    /* width: 100%; */            /* De el momken a3melaha uncomment 3ashan arga3 eladem */
+    width: 80%;
+/* width:850px; */
+    margin-left: 100px;            /*w de */
     /* height: 684px; */
     height: 100%;
     background-color: #ffffff;
     border-radius: 24px;
     box-shadow: 0px 2px 10px rgba(3,3,3,0.1);
+  }
+  .total{
+    width: 82%;                                   /* w amsah de */
+  }
+  .spanaya{
+    margin-left: 100px;                                  /* w de */
   }
   .emptycart{
    margin-left: 285px;
@@ -17,6 +26,9 @@
   }
   /* .quantitybuttons{
     margin-left: 200px;
+  } */
+  /* .total{
+    margin-left: 150px;
   } */
   .main-text {
     color: #1d1d1d;
