--- a/B-app/src/app/components/checkout/checkout.component.css
+++ b/B-app/src/app/components/checkout/checkout.component.css
@@ -1,33 +1,36 @@
 .recit{
-    /* top: 232px; */
-  /* left: 936px; */
-  /* width: 40%; */
   width: 60%;
   margin-left: 20%;
-  /* width: 100px; */
-  /* height: 684px; */
   margin-top: 30px;
-  height: 80%;
-  background-color: #cc9afd44;
+  /* height: 400px; */
+  height: 100%;
+ background-image: url("../../../assets/images/purpleBG.jpg");
+ background-repeat:no-repeat ;
+ background-size: cover;
   border-radius: 24px;
-  /* padding-top: 38px; */
-  /* padding-left: 35px;
-  margin-left: 340px; */
+}
+.bookingsuccess{
+    margin: 100px;
+    display: flex;
+    justify-content: center;
 }
 .button{
     background-color:#ffffff;
     color: #1d1d1d;
     border-radius:10px ;
+    margin-top: 60px;
+    margin-left: 30%;
 }
 .button:hover{
-    background-color:#cb9afd;
-    color: white;
+    /* background-color:#cb9afd; */
+    font-size: large;
     border-color: gray;
 }
 .form-control{
     height: 50px;
     border-radius: 10px;
     width: 500px; 
+    margin-left: 5%;
 }
 .recit h1{
     color: #ffffff;
