--- a/B-app/src/app/components/checkout/checkout.component.html
+++ b/B-app/src/app/components/checkout/checkout.component.html
@@ -1,5 +1,5 @@
-<div class="recit p-5 ">
-    <p><i class="fa-solid fa-arrow-left"></i> checkout step</p>
+<div class="recit p-5 " *ngIf="isOrdered; else Ordered">
+    <p class="text-black-50"><i class="fa-solid fa-arrow-left text-black"></i> checkout step</p>
     <!-- <h1>Payment Info</h1>
     <h2>Payment Method</h2>
     <div class="methods d-flex align-items-start justify-content-between">
@@ -51,33 +51,31 @@
       </div>
     </div>
     <button class="Confirmbtn">Confirm & Pay $ 37.17</button> -->
-    <form  (ngSubmit)="handelOrderForm()" [formGroup]="orderForm" class="h" >
-      <input type="text" class=" b d-flex form-control " id="name" formControlName="name" placeholder="Enter Your Name">
-      <div *ngIf="orderForm.get('name')?.errors && (orderForm.get('name')?.touched) || (orderForm.get('name')?.value.Length>0)" class="alert alert-danger b d-flex form-control mt-1 ">
-          <p *ngIf="orderForm.get('name')?.getError('required')" class=""> Name is required</p>
-      </div>
-      <input type="email" class=" b d-flex form-control mt-3" id="email" formControlName="email" placeholder="Enter Your E-mail">
-      <div *ngIf="orderForm.get('email')?.errors && (orderForm.get('email')?.touched) || (orderForm.get('email')?.value.Length>0)" class="alert alert-danger b d-flex form-control mt-1 ">
-          <p *ngIf="orderForm.get('email')?.getError('required')" class=""> Email is required</p>
-          <p *ngIf="orderForm.get('email')?.getError('email')">Invalid Email</p>
-      </div>
+    <div class="mt-5">
+      <form  (ngSubmit)="handelOrderForm(secNum,address)" [formGroup]="orderForm" class="h" >
+        <input type="number" class="d-flex b mt-3 form-control " name="secNum" [(ngModel)]="secNum" id="secNum" formControlName="secNum" placeholder="Enter your phone number">
+        <div *ngIf="orderForm.get('secNum')?.errors && (orderForm.get('secNum')?.touched) || (orderForm.get('secNum')?.value.Length>0)" class="alert  alert-danger b d-flex form-control mt-1 ">
+        <p *ngIf="orderForm.get('secNum')?.getError('required')"> Mobile Number is Required</p>
+        </div>
   
-      <input type="number" class="d-flex b mt-3 form-control " id="mobileNumber" formControlName="mobileNumber" placeholder="Enter Your Phone number">
-      <div *ngIf="orderForm.get('mobileNumber')?.errors && (orderForm.get('mobileNumber')?.touched) || (orderForm.get('mobileNumber')?.value.Length>0)" class="alert  alert-danger b d-flex form-control mt-1 ">
-      <p *ngIf="orderForm.get('mobileNumber')?.getError('required')">    Mobile Number is Required</p>
-      </div>
-
-      <input type="text" class="d-flex b mt-3 form-control " id="address" formControlName="address" placeholder="Put Your Address">
-      <div *ngIf="orderForm.get('address')?.errors && (orderForm.get('address')?.touched) || (orderForm.get('address')?.value.Length>0)" class="alert  alert-danger b d-flex form-control mt-1 ">
-      <p *ngIf="orderForm.get('address')?.getError('required')"> Address is Required</p>
-      </div>
-      <!-- <input type="text" class="d-flex b mt-3 form-control " id="code" name="code" [(ngModel)]="code" formControlName="code" placeholder="Put Your code">
-      <div *ngIf="BookingForm.get('code')?.errors && (BookingForm.get('code')?.touched) || (BookingForm.get('code')?.value.Length>0)" class="alert  alert-danger b d-flex form-control mt-1 ">
-      <p *ngIf="BookingForm.get('code')?.getError('required')"> Discount Code is Required</p>
-      </div> -->
-
-      <button  [disabled]=""class="btn button mt-4 d-flex justify-content-center align-items-center">Submit
-          <!-- <i *ngIf="isLoading" class="fa fa-spin fa-spinner"></i> -->
-      </button>
-  </form>
+        <input type="text" class="d-flex b mt-3 form-control " name="address" [(ngModel)]="address" id="address" formControlName="address" placeholder="Put your detailed address :  (Optional)">
+        <div *ngIf="orderForm.get('address')?.errors && (orderForm.get('address')?.touched) || (orderForm.get('address')?.value.Length>0)" class="alert  alert-danger b d-flex form-control mt-1 ">
+        <p *ngIf="orderForm.get('address')?.getError('required')"> Address is Required</p>
+        </div>
+        <!-- <input type="text" class="d-flex b mt-3 form-control " id="code" name="code" [(ngModel)]="code" formControlName="code" placeholder="Put Your code">
+        <div *ngIf="BookingForm.get('code')?.errors && (BookingForm.get('code')?.touched) || (BookingForm.get('code')?.value.Length>0)" class="alert  alert-danger b d-flex form-control mt-1 ">
+        <p *ngIf="BookingForm.get('code')?.getError('required')"> Discount Code is Required</p>
+        </div> -->
+  
+        <button  [disabled]=""class="btn button  d-flex justify-content-center align-items-center" >Submit
+            <!-- <i *ngIf="isLoading" class="fa fa-spin fa-spinner"></i> -->
+        </button>
+    </form>
+    </div>
   </div>
+  <ng-template #Ordered>
+    <div class="text-success bookingsuccess" >
+       <h1 class="mt-5"> You have ordered successfully!</h1>
+       <img src="../../../assets/images/greencheckk.png" class="greenCheck">
+    </div>
+   </ng-template>
