--- a/B-app/src/app/components/navbar-blank/navbar-blank.component.html
+++ b/B-app/src/app/components/navbar-blank/navbar-blank.component.html
@@ -4,18 +4,6 @@
     <div class="container"  >
         <img src="../../../assets/images/online-agreement logo.avif" class="handshake g-3 ">
         <h3 class="esm" routerLink="/home">BC Hub  </h3>
-        
-        <!-- <button
-            class="navbar-toggler d-lg-none"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapsibleNavId"
-            aria-controls="collapsibleNavId"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-        >
-            <span class="navbar-toggler-icon"></span>
-        </button> -->
         <div class="collapse navbar-collapse " id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0 navbarGeded">
                 <li class="nav-item">
@@ -27,35 +15,25 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/categories" routerLinkActive="hi fw-bold ">Categories</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" routerLink="/products" routerLinkActive="hi fw-bold ">Products</a>
-                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/cart" routerLinkActive="hi fw-bold ">Cart</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" routerLink="/products" routerLinkActive="text-success fw-bold ">Products</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/categories" routerLinkActive="text-success fw-bold ">Categories</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/brands" routerLinkActive="text-success fw-bold ">Brands</a>
-                </li> -->
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="historyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          History
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="historyDropdown">
+                          <li><a class="dropdown-item" routerLink="/allOrder">All Orders</a></li>
+                          <li><a class="dropdown-item" routerLink="/allSessions">Booked Sessions</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
             </ul>
             <ul class="navbar-nav ms-auto mt-2 mt-lg-0 me-3 gap-3  ">
-                <!-- <li class="nav-item " >
-                    <i class="fa fa-shopping-cart">
-                        <div class="badge bg-main ">{{numberOfItems}}</div>
-                    </i>
-                 </li> -->
-                <!-- <li class="nav-item d-flex gap-3" >
-                    <i class="fab fa-facebook"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-youtube"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-tiktok"></i>
-                </li> -->
+             
                 <li class="nav-item " >
                    <span (click)="signOut()" class="span"> Log Out</span>
                 </li>
