--- a/B-app/src/app/components/service-details/service-details.component.html
+++ b/B-app/src/app/components/service-details/service-details.component.html
@@ -26,8 +26,8 @@
     </div>
   </section>
   <div class="one">
-    <input type="text" class="form-control my-3 w-50 mx-auto " [(ngModel)]="searchTerm" placeholder=" search..."> 
-
+    <input type="text" class="form-control my-3 w-50 mx-auto search" [(ngModel)]="searchTerm" placeholder=" search..."> 
+ 
     <h1 class="servic-title">Service Providers</h1>
     <!-- <h6 class="servic-num"> 9 providers </h6> -->
   </div>
