--- a/B-app/src/app/components/all-orders/all-orders.component.css
+++ b/B-app/src/app/components/all-orders/all-orders.component.css
@@ -1,12 +1,29 @@
 .bigContainer{
-    margin-left: 13%;
+    margin-left: 15%;
+    width: 70%;
 }
 .productImage{
     height: 80px;
 }
-.Date{
+/* .Date{
     margin-left: 500px;
 }
 .DateText{
     margin-left:530px ;
+} */
+ .centerr{
+    margin-left: 40px;
+ }
+ .Centerfelnos{
+    margin-left: 200px;
+ }
+ .btnn{
+    background-color: #DCAEFD;
+    border-radius:20px ;
+    width: 200px;
+    height: 44px;
+    margin-left: 20px;
+    color: white;
+    border: 1px solid;
+    border-color: #DCAEFD;
 }
