--- a/B-app/src/app/components/home/home.component.html
+++ b/B-app/src/app/components/home/home.component.html
@@ -8,6 +8,11 @@
             <h1>Find the best business solutions 
             </h1>
         </div>
+        <!-- <p class="">Welcome to our Business Consulting Hub, a comprehensive platform designed to cater to all your business needs. Once you log in, you'll have access to a wide array of services tailored to enhance your business operations. Navigate through our meticulously curated list of services, each aimed at addressing specific aspects of your business where you might seek professional assistance.
+
+          Upon selecting a service, you'll be presented with a selection of reputable companies specialized in that field. Choose the company that best fits your requirements and conveniently book a consultation session with their experts. Our platform ensures a seamless process, making it easier for you to connect with the right professionals.
+          
+          In addition to consulting services, our platform also functions as an e-commerce website. Explore and purchase high-quality goods across various categories, handpicked to support your business growth. Enjoy the dual benefits of expert consultation and premium product shopping, all in one place.</p> -->
         <div class="third">
 
             <!-- <div class="firstinput">
@@ -77,13 +82,12 @@
             <p class="secondary-text">We prioritize your business security, employing top-notch encryption methods to safeguard your data. Trust us for secure data storage and protection.</p>
             <button class="try-now" [routerLink]="['/services']">Try Now</button>
           </div>
-          
-          
+
         </div>
         <div  class="home-service-item item2">
           <div id="serv-text2" class="home-service-item-text item2-text">
             <h2 class="main-text">Smart cost-cutting solutions</h2>
-            <p class="secondary-text">Empower your business with cost-saving strategies and efficient operations. Let our tool analyze and optimize your workflows for maximum savings.</p>
+            <p class="secondary-text">Enhance your business with cost-saving strategies, efficient operations, and exclusive discounts. Benefit from tailored solutions and special offers with our provided discount codes to streamline processes and boost your bottom line.</p>
             <button class="try-now"  [routerLink]="['/services']">Try Now</button>
           </div>
           <img id="serv-img2" [src]="images[4]" alt="">
@@ -135,11 +139,10 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-gem me-3"></i>Business Consulting Hub
           </h6>
           <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
+           Our Business Consulting Hub, your go-to platform for tailored business solutions. Access diverse services, connect with experts, and shop premium goods—all in one place. Simplify your business journey with seamless navigation and expert guidance.
           </p>
         </div>
         <!-- Grid column -->
@@ -148,19 +151,19 @@
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Products
+            <!-- Products --> Services
           </h6>
           <p>
-            <a class="text-reset">Angular</a>
+            <a class="text-reset">Marketing</a>
           </p>
           <p>
-            <a class="text-reset">React</a>
+            <a class="text-reset">Accounting</a>
           </p>
           <p>
-            <a class="text-reset">Vue</a>
+            <a class="text-reset">Logistics</a>
           </p>
           <p>
-            <a class="text-reset">Laravel</a>
+            <a class="text-reset">Consulting</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -172,16 +175,16 @@
             Useful links
           </h6>
           <p>
-            <a  class="text-reset">Pricing</a>
+            <a  class="text-reset">Growth Strategies</a>
           </p>
           <p>
-            <a class="text-reset">Settings</a>
+            <a class="text-reset">Problem-Solving Tips</a>
           </p>
           <p>
-            <a  class="text-reset">Orders</a>
+            <a  class="text-reset">Success Stories</a>
           </p>
           <p>
-            <a  class="text-reset">Help</a>
+            <a  class="text-reset">Expert Advice</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -190,13 +193,14 @@
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p><i class="fas fa-home me-3"></i> Maadi, Egypt</p>
           <p>
             <i class="fas fa-envelope me-3"></i>
             info@example.com
           </p>
-          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+          <p><i class="fas fa-phone me-3"></i>01033326480</p>
+          <p><i class="fas fa-phone me-3"></i>01120477710</p>
+          <p><i class="fas fa-phone me-3"></i>01152159555</p>
         </div>
         <!-- Grid column -->
       </div>
@@ -207,14 +211,11 @@
 
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    © 2021 Copyright
+    <!-- <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a> -->
   </div>
-  <!-- Copyright -->
+ 
 </footer>
-<!-- Footer -->
       </footer>
     </section>
-    <!-- <script [src]="assets/vendors/js/bootstrap.bundle.min.js"></script> -->
-
 </section>
