--- a/B-app/src/app/components/navbar-blank/navbar-blank.component.html
+++ b/B-app/src/app/components/navbar-blank/navbar-blank.component.html
@@ -2,8 +2,8 @@
     class="navbar navbar-expand-sm navbar-light bg-light fixed-top "
 >
     <div class="container"  >
-        <img src="../../../assets/images/online-agreement logo.avif" class="handshake g-3 ">
-        <h3 class="esm" routerLink="/home">BC Hub  </h3>
+        <img src="../../../assets/images/logo1.png" class="handshake g-3 imageObacity ">
+        <h3 class="esm" routerLink="/home">BCHub  </h3>
         <div class="collapse navbar-collapse " id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0 navbarGeded">
                 <li class="nav-item">
@@ -26,14 +26,18 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="historyDropdown">
                           <li><a class="dropdown-item" routerLink="/allOrder">All Orders</a></li>
-                          <li><a class="dropdown-item" routerLink="/allSessions">Booked Sessions</a></li>
+                          <li><a class="dropdown-item" routerLink="/allSessions">Booked Services</a></li>
                         </ul>
                       </li>
                     </ul>
                   </div>
             </ul>
             <ul class="navbar-nav ms-auto mt-2 mt-lg-0 me-3 gap-3  ">
-             
+             <!-- <div><i class="fa-solid fa-cart-shopping text-main "></i></div> -->
+             <li class="nav-item " >
+                <i class="fa fa-shopping-cart">
+                    <div class="badge bg-main ">{{numberOfItems}}</div>
+                </i>
                 <li class="nav-item " >
                    <span (click)="signOut()" class="span"> Log Out</span>
                 </li>
