--- a/B-app/src/app/components/provider-details/provider-details.component.html
+++ b/B-app/src/app/components/provider-details/provider-details.component.html
@@ -1,13 +1,16 @@
-
-
 <div class="mt-4 bg-light product p-3 ">
-  <h2 class="d-flex justify-content-center align-items-center ">  {{ providerDetails.name }} <img [src]="providerDetails.imageUrl" /></h2>
-
- <h6 class="text-info d-block d-flex justify-content-center align-items-center">{{ providerDetails.email }}</h6>
- <h5 >About The Company :</h5> <br>
-    <p class="d-flex justify-content-center align-items-center" >  {{providerDetails.description}}</p>
-    <h5>The Company's Address  :</h5> <br>
-    {{providerDetails.address}}
+<div class="d-flex justify-content-center align-items-center ">
+  <img [src]="providerDetails.imageUrl">
+</div>
+<p class="align-items-center d-flex justify-content-center h4">{{ providerDetails.name }} </p>
+ <div>
+  <h5 >About The Company :</h5> 
+    <p class="d-flex justify-content-center align-items-center mt-2" >  {{providerDetails.description}}</p>
+ </div>
+    <p class="mt-2"><i class="fas fa-home "></i> : {{providerDetails.address}}</p>
+    <p class=""><i class="fas fa-phone "></i> : {{providerDetails.phone}}</p>
+    <p class="text-primary "> <i class="fas fa-envelope text-dark"></i> : {{providerDetails.email}}</p>
+    
 </div>
 
 <button class="btn mt-2 d-flex justify-content-center align-items-center fw-bold " [routerLink]="['/bookingForm' ,providerDetails.id]">Book a Service</button>
