--- a/B-app/src/app/components/sign-up/sign-up.component.html
+++ b/B-app/src/app/components/sign-up/sign-up.component.html
@@ -4,30 +4,30 @@
     <form  (ngSubmit)="handelSignUpForm()" [formGroup]="SignUpForm" class="h">
         <!-- <label for="email">email</label> -->
         <h4 >Sign Up </h4>
-        <input type="text" class=" b d-flex form-control " id="name" formControlName="name" placeholder="Enter Your Name">
+        <input type="text" class=" b d-flex form-control " id="name" formControlName="name" placeholder="Enter your Full name :">
         <div *ngIf="SignUpForm.get('name')?.errors && (SignUpForm.get('name')?.touched) || (SignUpForm.get('name')?.value.Length>0)" class="alert alert-danger b d-flex form-control mt-1 ">
-            <p *ngIf="SignUpForm.get('name')?.getError('required')" class=""> name is required</p>
+            <p *ngIf="SignUpForm.get('name')?.getError('required')" class=""> Name is required</p>
         </div>
-        <input type="email" class=" b d-flex form-control mt-3" id="email" formControlName="email" placeholder="Enter Your E-mail">
+        <input type="email" class=" b d-flex form-control mt-3" id="email" formControlName="email" placeholder=" Enter your E-mail :">
         <div *ngIf="SignUpForm.get('email')?.errors && (SignUpForm.get('email')?.touched) || (SignUpForm.get('email')?.value.Length>0)" class="alert alert-danger b d-flex form-control mt-1 ">
             <p *ngIf="SignUpForm.get('email')?.getError('required')" class=""> Email is required</p>
             <p *ngIf="SignUpForm.get('email')?.getError('email')">Invalid Email</p>
         </div>
         <!-- <label for="password">password</label> -->
-        <input type="password" class="d-flex b mt-3 form-control " id="password" formControlName="password" placeholder="Enter Your Password">
+        <input type="password" class="d-flex b mt-3 form-control " id="password" formControlName="password" placeholder="Enter your Password :">
         <div *ngIf="SignUpForm.get('password')?.errors && (SignUpForm.get('password')?.touched) || (SignUpForm.get('password')?.value.Length>0)" class="alert  alert-danger b d-flex form-control mt-1 ">
-        <p *ngIf="SignUpForm.get('password')?.getError('required')"> Password is Required</p>
+        <p *ngIf="SignUpForm.get('password')?.getError('required')"> Password is required</p>
         <!-- <p *ngIf="SignUpForm.get('password')?.getError('pattern')">It must be atleast 6 chars </p> -->
         </div>
 
-        <input type="password" class="d-flex b mt-3 form-control " id="confirmPassword" formControlName="confirmPassword" placeholder="Re-write password">
+        <input type="password" class="d-flex b mt-3 form-control " id="confirmPassword" formControlName="confirmPassword" placeholder=" Re-write password :">
         <div *ngIf="SignUpForm.get('confirmPassword')?.errors && (SignUpForm.get('confirmPassword')?.touched) || (SignUpForm.get('confirmPassword')?.value.Length>0)" class="alert  alert-danger b d-flex form-control mt-1 ">
-        <p *ngIf="SignUpForm.get('confirmPassword')?.getError('required')"> Re-Password is Required</p>
+        <p *ngIf="SignUpForm.get('confirmPassword')?.getError('required')"> Re-password is required</p>
         <!-- <p *ngIf="SignUpForm.get('repassword')?.getError('pattern')">It must be atleast 6 chars </p> -->
         </div>
-        <input type="address" class="d-flex b mt-3 form-control " id="address" formControlName="address" placeholder="Put Your Address">
+        <input type="address" class="d-flex b mt-3 form-control " id="address" formControlName="address" placeholder="Enter your address :">
         <div *ngIf="SignUpForm.get('address')?.errors && (SignUpForm.get('address')?.touched) || (SignUpForm.get('address')?.value.Length>0)" class="alert  alert-danger b d-flex form-control mt-1 ">
-        <p *ngIf="SignUpForm.get('address')?.getError('required')"> Address is Required</p>
+        <p *ngIf="SignUpForm.get('address')?.getError('required')"> Address is required</p>
         </div>
 
         <button  [disabled]="SignUpForm.invalid"class="btn mt-4 d-flex justify-content-center align-items-center ">Sign Up 
